// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingSpinner is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingSpinner testClass1 testClass2 css-1bim2l3-euiLoadingSpinner-m"
  data-test-subj="test subject string"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size l is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner css-sw67u7-euiLoadingSpinner-l"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size m is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner css-1bim2l3-euiLoadingSpinner-m"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size s is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner css-1x3quaw-euiLoadingSpinner-s"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size xl is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner css-ey9v1u-euiLoadingSpinner-xl"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size xxl is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner css-1kk40zl-euiLoadingSpinner-xxl"
  role="progressbar"
/>
`;
